--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -427,6 +427,7 @@ plugins:                          # plugin list (sorted by priority)
   - proxy-mirror                   # priority: 1010
   - proxy-cache                    # priority: 1009
   - proxy-rewrite                  # priority: 1008
+  - heads-rewrite                  # priority: 1007
   - workflow                       # priority: 1006
   - api-breaker                    # priority: 1005
   - limit-conn                     # priority: 1003
